@@ -6,6 +6,7 @@ import javax.microedition.khronos.opengles.GL11;
 import com.stickycoding.rokon.BufferObject;
 import com.stickycoding.rokon.Debug;
 import com.stickycoding.rokon.GLHelper;
+import com.stickycoding.rokon.VBOManager;
 
 /**
  * ArrayVBO.java
@@ -27,11 +28,11 @@ public class ArrayVBO extends VBO {
 		int[] nameArray = new int[1];
 		gl11.glGenBuffers(1, nameArray, 0);
 		bufferIndex = nameArray[0];
-		Debug.print("Adding new VBO idx=" + bufferIndex + " " + bufferObject.get().capacity());
-		GLHelper.bindBuffer(bufferIndex);
+		GLHelper.bindBuffer(bufferIndex, true);
 		gl11.glBufferData(GL11.GL_ARRAY_BUFFER, bufferObject.get().capacity(), bufferObject.get(), drawType);
 		setLoaded(bufferIndex);
-		Debug.print("VBO Added " + bufferIndex);
+		VBOManager.add(this);
+		Debug.print("VBO Load (" + bufferIndex + ")");
 	}
 
 }
